Implement picocli for different commands (#293)